Added more color schemes, fixes and accessibility improvements
-Added color schemes (including two new colorschemes: mono and trinity).
Made sure all theme colors can be changed in colorscheme css
- Added color scheme demo pages
- Added new theme (eureka).
- Added new button (highlight)
- Updated colorscheme less files
- Changed header social link markup
- Added screen reader text
- Updated utility header hover color contrast
- Fixed severe alert color contrast issue
- Updated accordion list so it can use multiple list classes
- Added new radio and checkbox styles
- Made accordeon list and service tiles accessible
- Added new theme (eureka). Added new button (highlight)

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Oct-18-2017 */
+/* cagov-template-v5 - v0.0.1 - Oct-30-2017 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -455,10 +455,10 @@ a.text-success:hover {
   color: #4dc149;
 }
 .text-info {
-  color: #50aee4;
+  color: #1C7DB5;
 }
 a.text-info:hover {
-  color: #249add;
+  color: #155e89;
 }
 .text-warning {
   color: #8a6d3b;
@@ -2227,8 +2227,8 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #fff;
-  background-color: #50aee4;
-  border-color: #3aa4e1;
+  background-color: #1C7DB5;
+  border-color: #196e9f;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2236,8 +2236,8 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #fff;
-  background-color: #249add;
-  border-color: #1e85c0;
+  background-color: #155e89;
+  border-color: #10496a;
 }
 .btn-info:active,
 .btn-info.active,
@@ -2259,11 +2259,11 @@ fieldset[disabled] .btn-info:active,
 .btn-info.disabled.active,
 .btn-info[disabled].active,
 fieldset[disabled] .btn-info.active {
-  background-color: #50aee4;
-  border-color: #3aa4e1;
+  background-color: #1C7DB5;
+  border-color: #196e9f;
 }
 .btn-info .badge {
-  color: #50aee4;
+  color: #1C7DB5;
   background-color: #fff;
 }
 .btn-warning {
@@ -3124,11 +3124,11 @@ a.label:focus {
   background-color: #4dc149;
 }
 .label-info {
-  background-color: #50aee4;
+  background-color: #1C7DB5;
 }
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #249add;
+  background-color: #155e89;
 }
 .label-warning {
   background-color: #F27e31;
@@ -3200,21 +3200,21 @@ a.label:focus {
 .alert-info {
   background-color: #d9edf7;
   border-color: #bce8f1;
-  color: #50aee4;
+  color: #1C7DB5;
 }
 .alert-info hr {
   border-top-color: #a6e1ec;
 }
 .alert-info .alert-link {
-  color: #249add;
+  color: #155e89;
 }
 .alert-info .alert-link.btn-default {
   border-color: #fff;
-  color: #249add;
+  color: #155e89;
 }
 .alert-info .alert-link.btn-default:hover {
   border-color: #fff;
-  color: #1c7bb2;
+  color: #0e405d;
 }
 .alert-warning {
   background-color: #fcf8e3;
@@ -3349,7 +3349,7 @@ a.label:focus {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-info {
-  background-color: #50aee4;
+  background-color: #1C7DB5;
 }
 .progress-striped .progress-bar-info {
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -3684,7 +3684,7 @@ a.label:focus {
   border-color: #bce8f1;
 }
 .panel-info > .panel-heading {
-  color: #50aee4;
+  color: #1C7DB5;
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
@@ -3693,7 +3693,7 @@ a.label:focus {
 }
 .panel-info > .panel-heading .badge {
   color: #d9edf7;
-  background-color: #50aee4;
+  background-color: #1C7DB5;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #bce8f1;
@@ -4382,6 +4382,29 @@ a:focus {
 /* -----------------------------------------
    OCEANSIDE
 ----------------------------------------- */
+/* ----- OCEANSIDE PRIMARY THEME COLORS -----  */
+.color-highlight,
+color-p1 {
+  color: #FDB81E;
+}
+.color-primary,
+color-p2 {
+  color: #046B99;
+}
+.color-standout,
+color-p3 {
+  color: #323A45;
+}
+/*  SECONDARY THEME COLORS	*/
+.color-s1 {
+  color: #E1F2F7;
+}
+.color-s2 {
+  color: #9FDBF1;
+}
+.color-s3 {
+  color: #50aee4;
+}
 /* -----------------------------------------
    RESET /source/less/cagov/reset.less
 ----------------------------------------- */
@@ -7384,7 +7407,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .utility-header a:hover,
 .utility-header a:focus,
 .utility-header a.hovered {
-  color: #FDB81E;
+  color: #fee09c;
   text-decoration: none;
 }
 .utility-header ul {
@@ -9244,18 +9267,17 @@ body {
   float: right !important;
 }
 .alert-severe {
-  background: #F27e31;
+  background: #FDB81E;
 }
 .alert-severe .close {
-  color: #823908;
-  text-shadow: 0 1px #f8ba91;
+  color: #000;
 }
 .alert-severe .alert-level {
-  color: #ffffff;
-  background: rgba(255, 255, 255, 0.15);
+  color: #000;
+  background: rgba(0, 0, 0, 0.15);
 }
 .alert-severe .alert-text {
-  color: #ffffff;
+  color: #000;
 }
 .global-header.compact .alert-banner {
   opacity: 0;
@@ -9372,6 +9394,26 @@ body {
 .panel-group .panel-heading .panel-title a.collapsed:after,
 .service-tile-content .panel-heading .panel-title a.collapsed:after {
   content: "\45";
+}
+/* list accordion */
+.accordion-list {
+  list-style: none;
+}
+.accordion-list li.tab {
+  cursor: pointer;
+  padding-bottom: 0;
+  margin-top: 13px;
+}
+.accordion-list .panel {
+  padding-left: 1em;
+  margin-bottom: 10px;
+}
+.accordion-list.list-standout li.tab {
+  padding-left: 1em;
+  margin-top: 0;
+}
+.accordion-list.list-understated {
+  padding-left: 0;
 }
 /* -----------------------------------------
    BREADCRUMBS -  /source/less/cagov/breadcrumbs.less
@@ -10644,12 +10686,6 @@ input[type="radio"]:checked + * i {
   background-color: #046B99;
   border-color: #046B99;
 }
-.u-check input[type="checkbox"]:checked + .check-icon-checkbox i::before,
-.u-check input[type="checkbox"]:checked + .u-check-icon-radio i::before,
-.u-check input[type="checkbox"]:checked + * .check-icon-checkbox i::before,
-.u-check input[type="checkbox"]:checked + * .check-icon-radio i::before {
-  content: "\4e";
-}
 .bg-primary--checked.checked,
 .checked .bg-primary--checked {
   background-color: #046B99 !important;
@@ -10690,6 +10726,33 @@ input[type="radio"]:checked + * i {
 }
 input[type=text]::-ms-clear {
   display: none;
+}
+.check {
+  position: relative;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  min-width: 100px;
+}
+/* primary Color */
+input[type="checkbox"]:checked + .bg-primary--checked,
+input[type="radio"]:checked + .bg-primary--checked,
+input[type="checkbox"]:checked + * .bg-primary--checked,
+input[type="radio"]:checked + * .bg-primary--checked {
+  background-color: #046B99;
+}
+/* highlight Color */
+input[type="checkbox"]:checked + .bg-highlight--checked,
+input[type="radio"]:checked + .bg-highlight--checked,
+input[type="checkbox"]:checked + * .bg-highlight--checked,
+input[type="radio"]:checked + * .bg-highlight--checked {
+  background-color: #FDB81E;
+}
+/* White Color */
+input[type="checkbox"]:checked + .color-white--checked,
+input[type="radio"]:checked + .color-white--checked,
+input[type="checkbox"]:checked + * .color-white--checked,
+input[type="radio"]:checked + * .color-white--checked {
+  color: #fff !important;
 }
 /* -----------------------------------------
    PUBLICATIONS /source/less/cagov/publications.less
@@ -11418,7 +11481,7 @@ fieldset[disabled] .location.contact .btn.active {
   transition-timing-function: ease;
   transition-delay: 0s;
   transition-duration: .3s;
-  border: 1px solid #e8e8e8;
+  border: 1px solid #f9f9f9;
   background-color: rgba(255, 255, 255, 0.2);
 }
 .bg-blue-gradient {
@@ -11808,6 +11871,26 @@ ul.list-overstated a {
 .list-standout li.open:before {
   content: "\33";
 }
+.list-primary {
+  padding: 0;
+  padding-left: 0.2em;
+}
+.list-primary li {
+  padding-left: 1.5em;
+}
+.list-primary li:before {
+  content: "\4b";
+  font-family: "CaGov";
+  width: 1.5em;
+  margin-left: -1.5em;
+  vertical-align: .1em;
+  font-size: .7em;
+  display: inline-block;
+  color: #046B99;
+}
+.list-primary li.open:before {
+  content: "\4f";
+}
 .accordion-list a {
   cursor: pointer;
 }
@@ -12041,6 +12124,49 @@ fieldset[disabled] .btn-standout.active {
 .btn-standout .badge {
   color: #323A45;
   background-color: #fff;
+}
+.btn-highlight {
+  color: #333333;
+  background-color: #FDB81E;
+  border-color: #FDB81E;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.btn-highlight:hover,
+.btn-highlight:focus,
+.btn-highlight:active,
+.btn-highlight.active,
+.open > .dropdown-toggle.btn-highlight {
+  color: #323A45;
+  background-color: #f5aa02;
+  border-color: #f5aa02;
+}
+.btn-highlight:active,
+.btn-highlight.active,
+.open > .dropdown-toggle.btn-highlight {
+  background-image: none;
+}
+.btn-highlight.disabled,
+.btn-highlight[disabled],
+fieldset[disabled] .btn-highlight,
+.btn-highlight.disabled:hover,
+.btn-highlight[disabled]:hover,
+fieldset[disabled] .btn-highlight:hover,
+.btn-highlight.disabled:focus,
+.btn-highlight[disabled]:focus,
+fieldset[disabled] .btn-highlight:focus,
+.btn-highlight.disabled:active,
+.btn-highlight[disabled]:active,
+fieldset[disabled] .btn-highlight:active,
+.btn-highlight.disabled.active,
+.btn-highlight[disabled].active,
+fieldset[disabled] .btn-highlight.active {
+  background-color: #FDB81E;
+  border-color: #FDB81E;
+}
+.btn-highlight .badge {
+  color: #FDB81E;
+  background-color: #333333;
 }
 .btn-secondary {
   color: #555555;
