--- a/source/less/cagov/accordion.less
+++ b/source/less/cagov/accordion.less
@@ -48,3 +48,26 @@
         }
     }
 }
+
+/* list accordion */
+.accordion-list {
+	list-style: none;
+	li.tab {
+		cursor: pointer;
+		padding-bottom: 0;
+		margin-top: 13px;
+	}
+	.panel {
+		padding-left: 1em;
+		margin-bottom: 10px;
+	}
+}
+.accordion-list.list-standout {
+	li.tab {
+		padding-left: 1em;
+		margin-top: 0;
+	}
+}
+.accordion-list.list-understated {
+	padding-left: 0;
+}
