--- a/source/less/cagov/global-header.less
+++ b/source/less/cagov/global-header.less
@@ -74,19 +74,19 @@
 			}
     }
 	
+	
+}
+
 .header-cagov-logo img {	 // Beta 5.0 addition	
-  top: -36px;		
+  top: 1px;		
   height: 32px;		
   position: absolute;		
-  margin-left: 7px;		
+  left: 27px;		
 }
 
 .header-cagov-logo a:focus img {		
 	outline:1px dotted black;		
-}	
 }
-
-
 
 
 //
