--- a/source/less/cagov/utility-header.less
+++ b/source/less/cagov/utility-header.less
@@ -29,7 +29,7 @@
         padding:3px 0;
 
         &:hover, &:focus, &.hovered {
-            color:@color-p1;
+            color:lighten(@color-p1, 25%); // beta 5.0 addition
             text-decoration:none;
         }
     }
