--- a/source/less/colorscheme/colorscheme-master.less
+++ b/source/less/colorscheme/colorscheme-master.less
@@ -24,5 +24,7 @@
 @import "cs-text-accent.less";
 @import "cs-image.less";
 @import "cs-carousel.less";
+@import "cs-buttons.less";
+@import "cs-blocks.less";
 
 @import "cs-high-contrast.less";       // File should always be last
