--- a/source/less/colorscheme/cs-global-header.less
+++ b/source/less/colorscheme/cs-global-header.less
@@ -3,6 +3,11 @@
    /source/less/colorscheme/global-header.less
 ----------------------------------------- */
 
+.utility-header { //beta 5.0 addition
+	background:@color-p2;
+    color:contrast(@color-p2);
+	}
+
 .global-header {
     /* Default header pattern */
     //background: @body-bg url("@{theme-directory}/header-background.jpg") no-repeat 40% 40%;
