--- a/source/less/colorscheme/cs-text-accent.less
+++ b/source/less/colorscheme/cs-text-accent.less
@@ -66,3 +66,6 @@
         color: @color-s3;
     }
 }
+
+.color-primary--hover:hover {color: @color-p2;}
+.bg-primary--hover:hover {background-color: @color-p2;}
