--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -19,7 +19,7 @@
 @brand-highlight:       #FDB81E;
 @brand-success:         #72ce6f;
 // @brand-info:         #02BFE7;
-@brand-info: 			#50aee4; // beta 5.0 addition
+@brand-info: 			#1C7DB5; // beta 5.0 addition
 @brand-warning:         #F27e31;
 @brand-danger:          #d34a37;
 
