--- a/source/less/colorscheme/colorscheme-eureka.less
+++ b/source/less/colorscheme/colorscheme-eureka.less
@@ -1,8 +1,7 @@
 
 
-
 /* -----------------------------------------
-   PASOROBLES
+   EUREKA
 ----------------------------------------- */
 
 //
@@ -10,17 +9,17 @@
 // --------------------------------------------------
 
 // Theme directory
-@theme-directory:       "@{template-path}/pasorobles";      // Folder where assets for theme are stored
+@theme-directory:       "@{template-path}/eureka";      // Folder where assets for theme are stored
 
 // Primary Theme colors
-@color-p1:              #fbad23;        // Gold
-@color-p2:              #9a0000;        // Red
-@color-p3:              #313131;        // Gray
+@color-p1:              #D9B295;        // Gold
+@color-p2:              #3E4B4D;        // Dark Grey
+@color-p3:              #21272A;        // Darker Grey
 
 // Secondary Theme colors
-@color-s1:              #f5f5f5;        // Lightest gray
-@color-s2:              #cccccc;        // Lighter gray
-@color-s3:              #e6dcdc;        // Light gray/red
+@color-s1:              #f9f8f8;        // Lightest Grey
+@color-s2:              #e2dfda;        // Lighter Grey
+@color-s3:              #ccc8bf;        // Light Grey
 
 // Accent Colors
 @color-a1:              #1f89db;            // Dark Blue
@@ -39,11 +38,11 @@
 @off-canvas-links:      #fff;           // Off Canvas link color
 @search-accent:         @color-p1;      // Search field input hover border
 @nav-accent:            @color-p1;      // Link hover and nav bar bottom line
-@body-color:            #5d5d5d;        // Background base and typically the page edge border
-@body-midline:          @color-s2;      // Midline gradient color
+@body-color:            #1d4d4c;        // Background base and typically the page edge border
+@body-midline:          @color-s3;      // Midline gradient color
 @edge-border:           @body-color;    // Applied to outer edge of the page
 @header-icon:           @color-p2;      // Icon left of main content H1
-@mobile-controls:		@color-p2;    	// Mobile controls
+@mobile-controls:		@color-p2;		    // Mobile controls
 @footer-txt:            #fff;           // Color of text and links in the footer
 
 @panel-border:        #ddd;
@@ -52,35 +51,35 @@
 @overstated-header-txt:         #fff;           // Panel header text color 
 @overstated-header-icon:        #fff;           // Panel header icon color  
 @overstated-header-border:      darken(@color-p2, 10%);     // Panel header bottom border color 
-@overstated-border:             @panel-border;     // Border surrounding entire panel
-@overstated-body-bg:            @color-s1;      		// Panel body background
+@overstated-border:             @panel-border;      // Border surrounding entire panel
+@overstated-body-bg:            @color-s1;      // Panel body background
 
-@panel-default-header-bg:       @color-s3;      // Background for panel header
-@panel-default-header-txt:      @text-color;    // Panel header text color
-@panel-default-header-icon:     @color-p3;      // Panel header icon color
-@panel-default-header-border:   @panel-border;      // Panel header bottom border color  
+@panel-default-header-bg:       @color-s2;      // Background for panel header
+@panel-default-header-txt:      @text-color;       // Panel header text color
+@panel-default-header-icon:     @color-p3;      // Panel header icon color 
+@panel-default-header-border:   @panel-border;      // Panel header bottom border color 
 @panel-default-border:          @panel-border;      // Border surrounding entire panel
-@panel-default-body-bg:         #fff;      		// Panel body background
+@panel-default-body-bg:         @color-s1;      // Panel body background
 
 @sidebar-default-header-bg:     @color-s2;      // Background for panel header
-@sidebar-default-header-txt:    @text-color;    // Panel header text color
+@sidebar-default-header-txt:    @text-color;       // Panel header text color
 @sidebar-default-header-icon:   @color-p3;      // Panel header icon color
-@sidebar-default-header-border: @panel-border;     		// Panel header bottom border color  
-@sidebar-default-border:        @panel-border;       		// Border surrounding entire panel
-@sidebar-default-body-bg:       #fff;      		// Panel body background
+@sidebar-default-header-border: @panel-border;       // Panel header bottom border color  
+@sidebar-default-border:        @panel-border;       // Border surrounding entire panel
+@sidebar-default-body-bg:       @color-s1;      // Panel body background
 
 @understated-header-bg:         @color-s1;      // Background for panel header
-@understated-header-txt:        @text-color;        // Panel header text color
-@understated-header-icon:       @color-p3;      // Panel header icon color
-@understated-header-border:     @panel-border;            // Panel header bottom border color   
-@understated-border:            @panel-border;           // Border surrounding entire panel
-@understated-body-bg:           #fff;      	// Panel body background
+@understated-header-txt:        @text-color;       // Panel header text color
+@understated-header-icon:       @color-p3;      // Panel header icon color 
+@understated-header-border:     @panel-border;           // Panel header bottom border color  
+@understated-border:            @panel-border;            // Border surrounding entire panel
+@understated-body-bg:           #fff;      // Panel body background
 
 @standout-header-bg:            @color-p3;      // Background for panel header
 @standout-header-txt:           #fff;           // Panel header text color
 @standout-header-icon:          @color-p1;      // Panel header icon color
-@standout-header-border:        @panel-border;       // Panel header bottom border color 
-@standout-border:               @panel-border;      // Border surrounding entire panel
+@standout-header-border:        @color-p1;      // Panel header bottom border color 
+@standout-border:               @panel-border;            // Border surrounding entire panel
 @standout-body-bg:              @color-s1;      // Panel body background
 
 @figure-border:                 @color-s2;      // Border around media captions
@@ -95,7 +94,7 @@
 @expanded-background-color: @gray-lighter;
 @text-field-color: rgba(255, 255, 255, 0.8); // 80% white
 
-/* ----- PASOROBLES PRIMARY THEME COLORS -----  */
+/* ----- EUREKA PRIMARY THEME COLORS -----  */
 
 .color-highlight, color-p1 {
     color: @color-p1;
