--- a/source/less/colorscheme/colorscheme-santabarbara.less
+++ b/source/less/colorscheme/colorscheme-santabarbara.less
@@ -1,6 +1,4 @@
-@import "variables.less";
-@import "bootstrap/mixins.less";
-@import "cagov/mixins.less";
+
 
 
 /* -----------------------------------------
@@ -15,14 +13,25 @@
 @theme-directory:       "@{template-path}/santabarbara";      // Folder where assets for theme are stored
 
 // Primary Theme colors
-@color-p1:              #fbad23;        // Gold
-@color-p2:              #b77b01;        // Dark Gold
-@color-p3:              #014e78;        // Blue
+@color-p1:              #FF9B53;        // Gold
+@color-p2:              #60617d;        // Dark Violet
+@color-p3:              #664945;        // Brown Violet
 
 // Secondary Theme colors
-@color-s1:              #f3fbfd;        // Lightest blue
-@color-s2:              #d1edf0;        // Lighter blue
-@color-s3:              #f2bf64;        // Light orange
+@color-s1:              #FFEBD7;        // Lightest Gold
+@color-s2:              #f1dac2;        // Lighter Gold
+@color-s3:              #e8bd90;        // Light Gold
+
+// Accent Colors
+@color-a1:              #1f89db;            // Dark Blue
+@color-a2:              #49bbf8;            // Med Blue
+@color-a3:              #35bbaa;            // Teal
+@color-a4:              #72ce6f;     		// Green @brand-success
+@color-a5:              #815ab4;            // Purple
+@color-a6:              #dd99e5;            // Lavender
+@color-a7:              #d34a37;      		// Red @brand-danger
+@color-a8:              #F27e31;     		// Orange @brand-warning
+@color-a9:              #f7e455;            // Yellow
 
 // Module or theme specific variables
 @nav-first-level:       #fff;           // Color of navigation links
@@ -34,45 +43,77 @@
 @body-midline:          @color-s2;      // Midline gradient color
 @edge-border:           @body-color;    // Applied to outer edge of the page
 @header-icon:           @color-p2;      // Icon left of main content H1
-@mobile-controls:		#fff;		    // Mobile controls
+@mobile-controls:		@color-p2; 		    // Mobile controls
 @footer-txt:            #fff;           // Color of text and links in the footer
+
+@panel-border:        #ddd;
 
 @overstated-header-bg:          @color-p2;      // Background for panel header
 @overstated-header-txt:         #fff;           // Panel header text color 
 @overstated-header-icon:        #fff;           // Panel header icon color  
 @overstated-header-border:      darken(@color-p2, 10%);      // Panel header bottom border color 
-@overstated-border:             darken(@color-p2, 10%);      // Border surrounding entire panel
-@overstated-body-bg:            #fcf8f0;        // Panel body background
+@overstated-border:             @panel-border;       // Border surrounding entire panel
+@overstated-body-bg:            @color-s1;         	// Panel body background
 
 @panel-default-header-bg:       @color-s3;      // Background for panel header
-@panel-default-header-txt:      inherit;        // Panel header text color
-@panel-default-header-icon:     inherit;        // Panel header icon color
-@panel-default-header-border:   darken(@color-p2, 10%);      // Panel header bottom border color  
-@panel-default-border:          darken(@color-p2, 10%);      // Border surrounding entire panel
-@panel-default-body-bg:         #fcf8f0;        // Panel body background
+@panel-default-header-txt:      @text-color;        // Panel header text color
+@panel-default-header-icon:     @color-p3;        // Panel header icon color
+@panel-default-header-border:   @panel-border;      // Panel header bottom border color  
+@panel-default-border:          @panel-border;       // Border surrounding entire panel
+@panel-default-body-bg:         #fff;        // Panel body background
 
 @sidebar-default-header-bg:     @color-s2;      // Background for panel header
-@sidebar-default-header-txt:    inherit;        // Panel header text color
+@sidebar-default-header-txt:    @text-color;       // Panel header text color
 @sidebar-default-header-icon:   @color-p3;      // Panel header icon color
-@sidebar-default-header-border: @color-p3;      // Border between header and body  
-@sidebar-default-border:        @color-p3;      // Border on top
-@sidebar-default-body-bg:       @color-s1;      // Panel body background
+@sidebar-default-header-border: @panel-border;      // Border between header and body  
+@sidebar-default-border:        @panel-border;       // Border on top
+@sidebar-default-body-bg:       #fff;      // Panel body background
 
-@understated-header-bg:         #fcf8f0;        // Background for panel header
-@understated-header-txt:        inherit;        // Panel header text color
+@understated-header-bg:         @color-s1;         // Background for panel header
+@understated-header-txt:        @text-color;        // Panel header text color
 @understated-header-icon:       @color-p3;      // Panel header icon color 
-@understated-header-border:     #ccc;           // Panel header bottom border color  
-@understated-border:            #ccc;           // Border surrounding entire panel
-@understated-body-bg:           #fcf8f0;        // Panel body background
+@understated-header-border:     @panel-border;           // Panel header bottom border color  
+@understated-border:            @panel-border;           // Border surrounding entire panel
+@understated-body-bg:           #fff;        // Panel body background
 
 @standout-header-bg:            @color-p3;      // Background for panel header
 @standout-header-txt:           #fff;           // Panel header text color
 @standout-header-icon:          @color-p1;      // Panel header icon color
 @standout-header-border:        @color-p1;      // Panel header bottom border color 
-@standout-border:               #ccc;           // Border surrounding entire panel
+@standout-border:               @panel-border;          // Border surrounding entire panel
 @standout-body-bg:              @color-s1;      // Panel body background
 
 @figure-border:                 @color-s2;      // Border around media captions
 @figure-bg:                     @color-s1;      // Background behind figure and caption
 
-@import "colorscheme/colorscheme-master.less";
+// MEGAMENU
+@sub-nav-bg:                    lighten(@color-s1, 7%);
+@sub-nav-link-border:           @gray-lighter;
+@sub-nav-media-bg:              transparent;
+
+// SEARCH
+@expanded-background-color: @gray-lighter;
+@text-field-color: rgba(255, 255, 255, 0.8); // 80% white
+
+/* ----- SANTA BARBARA PRIMARY THEME COLORS -----  */
+
+.color-highlight, color-p1 {
+    color: @color-p1;
+    }
+.color-primary, color-p2 {
+    color: @color-p2;
+    }
+.color-standout, color-p3 {
+    color: @color-p3;
+    }
+	
+/*  SECONDARY THEME COLORS	*/
+.color-s1 {
+    color: @color-s1;
+    }
+.color-s2 {
+    color: @color-s2;
+    }
+.color-s3 {
+    color: @color-s3;
+    }
