--- a/source/less/colorscheme/colorscheme-sierra.less
+++ b/source/less/colorscheme/colorscheme-sierra.less
@@ -1,10 +1,7 @@
-@import "variables.less";
-@import "bootstrap/mixins.less";
-@import "cagov/mixins.less";
 
 
 /* -----------------------------------------
-   OCEANSIDE
+   SIERRA
 ----------------------------------------- */
 
 //
@@ -24,6 +21,17 @@
 @color-s2:              #daefe8;        // Lighter green
 @color-s3:              #a1cca1;        // Light green
 
+// Accent Colors
+@color-a1:              #1f89db;            // Dark Blue
+@color-a2:              #49bbf8;            // Med Blue
+@color-a3:              #35bbaa;            // Teal
+@color-a4:              #72ce6f;     		// Green @brand-success
+@color-a5:              #815ab4;            // Purple
+@color-a6:              #dd99e5;            // Lavender
+@color-a7:              #d34a37;      		// Red @brand-danger
+@color-a8:              #F27e31;     		// Orange @brand-warning
+@color-a9:              #f7e455;            // Yellow
+
 // Module or theme specific variables
 @nav-first-level:       #fff;           // Color of navigation links
 @nav-second-level:      @text-color;    // Second level link colors
@@ -34,46 +42,77 @@
 @body-midline:          @color-s3;      // Midline gradient color
 @edge-border:           @body-color;    // Applied to outer edge of the page
 @header-icon:           @color-p2;      // Icon left of main content H1
-@mobile-controls:		#fff;		    // Mobile controls
+@mobile-controls:		@color-p2;		    // Mobile controls
 @footer-txt:            #fff;           // Color of text and links in the footer
+
+@panel-border:        #ddd;
 
 @overstated-header-bg:          @color-p2;      // Background for panel header
 @overstated-header-txt:         #fff;           // Panel header text color 
 @overstated-header-icon:        #fff;           // Panel header icon color  
 @overstated-header-border:      darken(@color-p2, 10%);     // Panel header bottom border color 
-@overstated-border:             @color-p2;      // Border surrounding entire panel
+@overstated-border:             @panel-border;       // Border surrounding entire panel
 @overstated-body-bg:            @color-s1;      // Panel body background
 
 @panel-default-header-bg:       @color-s3;      // Background for panel header
-@panel-default-header-txt:      inherit;        // Panel header text color
+@panel-default-header-txt:      @text-color;       // Panel header text color
 @panel-default-header-icon:     @color-p3;      // Panel header icon color 
-@panel-default-header-border:   darken(@color-p2, 10%);      // Panel header bottom border color 
-@panel-default-border:          darken(@color-p2, 10%);      // Border surrounding entire panel
+@panel-default-header-border:   @panel-border;       // Panel header bottom border color 
+@panel-default-border:          @panel-border;       // Border surrounding entire panel
 @panel-default-body-bg:         @color-s1;      // Panel body background
 
 @sidebar-default-header-bg:     @color-s2;      // Background for panel header
-@sidebar-default-header-txt:    inherit;        // Panel header text color
+@sidebar-default-header-txt:    @text-color;        // Panel header text color
 @sidebar-default-header-icon:   @color-p3;      // Panel header icon color
-@sidebar-default-header-border: @color-p3;      // Panel header bottom border color  
-@sidebar-default-border:        @color-p3;      // Border surrounding entire panel
+@sidebar-default-header-border: @panel-border;       // Panel header bottom border color  
+@sidebar-default-border:        @panel-border;       // Border surrounding entire panel
 @sidebar-default-body-bg:       @color-s1;      // Panel body background
 
 @understated-header-bg:         @color-s1;      // Background for panel header
-@understated-header-txt:        inherit;        // Panel header text color
+@understated-header-txt:        @text-color;    // Panel header text color
 @understated-header-icon:       @color-p3;      // Panel header icon color 
-@understated-header-border:     #ccc;           // Panel header bottom border color  
-@understated-border:            #ccc;           // Border surrounding entire panel
-@understated-body-bg:           @color-s1;      // Panel body background
+@understated-header-border:     @panel-border;            // Panel header bottom border color  
+@understated-border:            @panel-border;            // Border surrounding entire panel
+@understated-body-bg:           #fff;      // Panel body background
 
 @standout-header-bg:            @color-p3;      // Background for panel header
 @standout-header-txt:           #fff;           // Panel header text color
 @standout-header-icon:          @color-p1;      // Panel header icon color
 @standout-header-border:        @color-p1;      // Panel header bottom border color 
-@standout-border:               #ccc;           // Border surrounding entire panel
+@standout-border:               @panel-border;            // Border surrounding entire panel
 @standout-body-bg:              @color-s1;      // Panel body background
 
 @figure-border:                 @color-s2;      // Border around media captions
 @figure-bg:                     @color-s1;      // Background behind figure and caption
 
+// MEGAMENU
+@sub-nav-bg:                    @color-s1;
+@sub-nav-link-border:           @gray-lighter;
+@sub-nav-media-bg:              transparent;
 
-@import "colorscheme/colorscheme-master.less";
+// SEARCH
+@expanded-background-color: @gray-lighter;
+@text-field-color: rgba(255, 255, 255, 0.8); // 80% white
+
+/* ----- SIERRA PRIMARY THEME COLORS -----  */
+
+.color-highlight, color-p1 {
+    color: @color-p1;
+    }
+.color-primary, color-p2 {
+    color: @color-p2;
+    }
+.color-standout, color-p3 {
+    color: @color-p3;
+    }
+	
+/*  SECONDARY THEME COLORS	*/
+.color-s1 {
+    color: @color-s1;
+    }
+.color-s2 {
+    color: @color-s2;
+    }
+.color-s3 {
+    color: @color-s3;
+    }
