--- a/source/less/colorscheme/colorscheme.less
+++ b/source/less/colorscheme/colorscheme.less
@@ -5,12 +5,13 @@
 @import "../bootstrap/mixins.less";
 @import "../cagov/mixins.less";
 
-// Set up your color scheme here
 
+// Set up your color scheme here
 // @import "colorscheme-orangecounty.less";
 // @import "colorscheme-pasorobles.less";
 // @import "colorscheme-santabarbara.less";
 // @import "colorscheme-sierra.less";
+// @import "colorscheme-trinity.less";
+// @import "colorscheme-mono.less";
+// @import "colorscheme-eureka.less";
 @import "colorscheme-oceanside.less"; // loading colorscheme variables into the colorscheme
-
-
