--- a/source/less/colorscheme/cs-testimonials.less
+++ b/source/less/colorscheme/cs-testimonials.less
@@ -43,6 +43,17 @@
             color:contrast(@color-p2);
         }
     }
+	
+	&-highlight {
+        .link-variant(@color-p3; @text-color; none; underline);
+        background:@color-p1;
+        color:@text-color;
+
+        
+        footer {
+            color:contrast(@color-p1);
+        }
+    }
     
     &-inverted {
         .link-variant(@color-p1; #fff; none; underline);
