--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Oct-30-2017 */
+/* cagov-template-v5 - v0.0.1 - Nov-02-2017 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -11853,7 +11853,13 @@ ul.list-overstated a {
 }
 .list-standout {
   padding: 0;
-  padding-left: 0.2em;
+  padding-left: 1.5em;
+}
+.list-standout ul li:before {
+  content: none;
+}
+.list-standout ul.list-standout li:before {
+  content: "\35";
 }
 .list-standout li {
   padding-left: 1.5em;
