--- a/source/less/cagov/lists.less
+++ b/source/less/cagov/lists.less
@@ -35,7 +35,15 @@ ul.list-overstated {
 .list-standout {
     @size: 1.5em;               // reusable variable for .list-standout
     padding:0;
-    padding-left: 0.2em;
+    padding-left: 1.5em;
+	
+	ul li:before {
+    content:none;
+}
+
+	ul.list-standout li:before {
+    content:"\35";
+}
 
     li {
         padding-left: @size;
