Updated settings close button style. Updated primary banner in page-templates.page

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -12368,7 +12368,18 @@ fieldset[disabled] a.btn-more {
   right: -10px;
   color: #fff;
   text-shadow: none;
-  opacity: .5;
+  opacity: .8;
+  font-size: 2.5em;
+}
+.site-settings button.close:hover {
+  color: #FDB81E;
+}
+.site-settings button.close:focus {
+  color: #FDB81E;
+}
+.site-settings button.close span {
+  position: relative;
+  top: -10px;
 }
 /* -----------------------------------------
    LOCATION SETTINGS
