--- a/source/less/cagov/settings-bar.less
+++ b/source/less/cagov/settings-bar.less
@@ -14,6 +14,19 @@
         right: -10px;
         color: #fff;
         text-shadow: none;
-        opacity: .5;
+        opacity: .8;
+		font-size:2.5em;
+		
+		  // Beta 5.0 addition
+		&:hover {
+			color:@color-p1;
+			}
+		&:focus {
+			color:@color-p1;
+			}
+		span {
+			position:relative;
+			top:-10px;
+		}
     }
 }
