Fixed 1px bouncing in tabs on active hover and on focus.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Nov-02-2017 */
+/* cagov-template-v5 - v0.0.1 - Nov-06-2017 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -9312,6 +9312,11 @@ body {
 .tab-group .nav-tabs li > a {
   padding: 3px 15px;
   border-top: 0;
+}
+.tab-group .nav-tabs li > a,
+.tab-group .nav-tabs li > a:hover,
+.tab-group .nav-tabs li > a:focus {
+  border-top: none;
 }
 .tab-group .tab-pane {
   padding: 15px;
