--- a/source/less/cagov/tabs.less
+++ b/source/less/cagov/tabs.less
@@ -29,6 +29,13 @@
             > a {
                 padding:3px (@grid-gutter-width / 2);
                 border-top:0;
+				
+				&,
+      &:hover,
+      &:focus {
+		      border-top: none;
+      }
+				
             }
             
         }
