--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Nov-06-2017 */
+/* cagov-template-v5 - v0.0.1 - Nov-07-2017 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -10613,7 +10613,7 @@ d-block {
   cursor: pointer;
 }
 .hidden-up {
-  display: none;
+  opacity: 0;
 }
 .check-icon-radio {
   backface-visibility: hidden;
@@ -10758,6 +10758,15 @@ input[type="radio"]:checked + .color-white--checked,
 input[type="checkbox"]:checked + * .color-white--checked,
 input[type="radio"]:checked + * .color-white--checked {
   color: #fff !important;
+}
+/* Focusable custom checkboxes and radios for accessibility */
+input[type="checkbox"]:focus + div,
+input[type="radio"]:focus + div {
+  box-shadow: 0 0 2px 2px #50aee4;
+}
+input[type="checkbox"]:focus + .btn,
+input[type="radio"]:focus + .btn {
+  outline: 1px dotted #000;
 }
 /* -----------------------------------------
    PUBLICATIONS /source/less/cagov/publications.less
