--- a/source/less/cagov/fixed-header.less
+++ b/source/less/cagov/fixed-header.less
@@ -51,8 +51,8 @@
 .fixed + div :target:before {		
 	display: block;		
 	content: "";		
-	height: 110px;		
-	margin: -110px 0 0;		
+	height: 140px;		 // Beta 5.0 addition (gives more space on top of targer)		
+	margin: -140px 0 0;			 // Beta 5.0 addition	
 }
 
 
