--- a/source/less/cagov/search.less
+++ b/source/less/cagov/search.less
@@ -548,7 +548,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES beta 5.0 addition
 	div.gsc-clear-button {
 		padding-left: 0 !important;
 		display: block !important;
-		background-image: unset !important;
+		background-image: none !important;
 		margin-left: 0;
 		margin-right: 0;
 		width: 40px;
