--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -97,7 +97,8 @@
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //-- By default, this inherits from the `<body>`.
-@headings-font-family:    @font-family-sans-serif;
+@headings-font-family:       @font-family-sans-serif;
+@headings-font-family-wf:    @font-family-wf-sans-serif;
 @headings-font-weight:    400;
 @headings-line-height:    1.1;
 @headings-color:          inherit;
