--- a/source/less/custom.less
+++ b/source/less/custom.less
@@ -3,3 +3,10 @@
 .wf-active body {
     font-family: @font-family-wf-base;
 }
+
+.wf-active {
+    h1, h2, h3, h4, h5, h6,
+    .h1, .h2, .h3, .h4, .h5, .h6 {
+        font-family: @headings-font-family-wf;
+    }
+}
