Load web fonts async using Google Web Font Loader

--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -71,10 +71,13 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "Source Sans Pro", sans-serif;
-@font-family-serif:       "Merriweather", serif;
+@font-family-wf-sans-serif:  "Source Sans Pro", sans-serif;
+@font-family-wf-serif:       "Merriweather", serif;
+@font-family-sans-serif:     Arial, sans-serif;
+@font-family-serif:          Georgia, serif;
 //-- Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+@font-family-wf-base:     @font-family-wf-sans-serif;
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          16px;
