--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -196,7 +196,7 @@ html {
   font-size: 1rem;
 }
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 1em;
   line-height: 1.42857143;
   color: #333333;
@@ -295,7 +295,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: 400;
   line-height: 1.1;
   color: inherit;
@@ -5577,13 +5577,13 @@ h6,
     padding-right: 150px;
   }
 }
-.header-cagov-logo img {
-  top: 1px;
+.branding .header-cagov-logo img {
+  top: -36px;
   height: 32px;
   position: absolute;
-  left: 27px;
+  margin-left: 7px;
 }
-.header-cagov-logo a:focus img {
+.branding .header-cagov-logo a:focus img {
   outline: 1px dotted black;
 }
 .mobile-controls toggle-menu {
@@ -6851,20 +6851,13 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES beta 5.0 addition
     right: 0;
   }
   /* Dynamic element contained in .nav-arrow-container */
-  .megadropdown .nav-arrow-down {
+  .nav-arrow-down {
     position: absolute;
     top: -5px;
     left: 50%;
     height: 5px;
     width: 100px;
     margin-left: -65px;
-  }
-  .dropdown .nav-arrow-down {
-    height: 5px;
-    left: 0;
-    margin-left: 0;
-    position: absolute;
-    top: -5px;
   }
 }
 .sub-nav {
@@ -9443,7 +9436,7 @@ hr.hr-light {
 .panel .panel-heading h3,
 .panel .panel-heading h4,
 .panel .panel-heading h5 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: 400;
   line-height: 1.1;
   color: inherit;
@@ -11750,7 +11743,7 @@ ul.list-overstated a {
 }
 .list-overstated li,
 .list-understated li {
-  background: url("../images/template2014/bullet-blue-disc.png") no-repeat 0 4px transparent;
+  background: url("../images/template2014/bullet-blue-disc.png") no-repeat 0 3px transparent;
   padding: 0 0 14px 18px;
   /* Rotates disc arrow down when used with accordion */
 }
@@ -13372,4 +13365,7 @@ fieldset[disabled] .mapthat-facet-item.active {
   cursor: text;
   opacity: 1;
   width: 250px;
+}
+.wf-active body {
+  font-family: "Source Sans Pro", sans-serif;
 }
