Update .list-standout to preserve line height
The arrows for the `.list-standout` style are inserted as inline-block pseudo-elements. Since their `font-size` is set to `1.5em`, they increase the height of the line they're on, disrupting the vertical rhythm of the list.

I suggest removing the arrows from the flow of the document. In my suggestion, I have absolutely positioned them and adjusted the other styles accordingly.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -11770,16 +11770,17 @@ ul.list-overstated a {
 }
 .list-standout li {
   padding-left: 1.5em;
+  position: relative;
 }
 .list-standout li:before {
   content: "\35";
   font-family: "CaGov";
   width: 1.5em;
-  margin-left: -1.5em;
-  vertical-align: sub;
   font-size: 1.5em;
   font-weight: 900;
-  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -.22em;
 }
 .list-standout li.open:before {
   content: "\33";
