--- a/source/less/colorscheme/colorscheme.less
+++ b/source/less/colorscheme/colorscheme.less
@@ -14,4 +14,5 @@
 // @import "colorscheme-trinity.less";
 // @import "colorscheme-mono.less";
 // @import "colorscheme-eureka.less";
+// @import "colorscheme-sacramento.less";
 @import "colorscheme-oceanside.less"; // loading colorscheme variables into the colorscheme
